Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,12 +149,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
+   ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    print(restaurant['rating'])\n"
+    "    print(restaurant['rating'])\n",
+    "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
   {
