Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,20 +149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.0\n"
+      "4.5\n"
      ]
     }
    ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    print(restaurant['rating'])\n",
+    "    print(alternative['rating'])\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
