Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,7 @@
    ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    print(alternative['rating'])\n",
+    "    if resta\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
