--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,7 @@
    ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    if restaurant['rating']\n",
+    "    for key,value in restaurant.items()\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
