--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,9 @@
    ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    for key,value in restaurant.items()\n",
+    "    for key,value in restaurant.items():\n",
+    "        for key1, value1 in alternative.items():\n",
+    "            \n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
