Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,7 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    for key,value in restaurant.items():\n",
     "        for key1, value1 in alternative.items():\n",
-    "            if key == 'rating' ans \n",
+    "            if key == 'rating' and key1 == rating''\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
