Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
     "    for key,value in restaurant.items():\n",
     "        for key1, value1 in alternative.items():\n",
     "            if key == 'rating' and key1 == 'rating':\n",
-    "                re\n",
+    "                return \n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
