--- a/index.ipynb
+++ b/index.ipynb
@@ -149,15 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.5\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4.5"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -165,7 +168,7 @@
     "    for key,value in restaurant.items():\n",
     "        for key1, value1 in alternative.items():\n",
     "            if key == 'rating' and key1 == 'rating':\n",
-    "                return \n",
+    "                return max(value, value1)\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
