Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,8 +167,8 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    for key,value in restaurant.items():\n",
     "        for key1, value1 in alternative.items():\n",
-    "            if key == 'rating' and key1 == 'rating' and max(value,value1:\n",
-    "                return max(value, value1)\n",
+    "            if key == 'rating' and key1 == 'rating' and max(value,value1):\n",
+    "                return restaurant[]\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
