Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.5"
+       "'Frontier Restaurant'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,8 +167,8 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    for key,value in restaurant.items():\n",
     "        for key1, value1 in alternative.items():\n",
-    "            if key == 'rating' and key1 == 'rating' and max(value,value1):\n",
-    "                return restaurant[]\n",
+    "            if key == 'rating' and key1 == 'rating' and :\n",
+    "                return restaurant['name']\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
