Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,8 +167,9 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    for key,value in restaurant.items():\n",
     "        for key1, value1 in alternative.items():\n",
-    "            if key == 'rating' and key1 == 'rating' and :\n",
+    "            if key == 'rating' and key1 == 'rating' and value > value1:\n",
     "                return restaurant['name']\n",
+    "            \n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
