Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,7 @@
     "        for key1, value1 in alternative.items():\n",
     "            if key == 'rating' and key1 == 'rating' and value > value1:\n",
     "                return restaurant['name']\n",
-    "            \n",
+    "            elif \n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
