Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,8 @@
     "        for key1, value1 in alternative.items():\n",
     "            if key == 'rating' and key1 == 'rating' and value > value1:\n",
     "                return restaurant['name']\n",
-    "            elif \n",
+    "            elif key == 'rating' and key1 == 'rating' and value1 > value:\n",
+    "                return alt\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
