Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,7 @@
     "            if key == 'rating' and key1 == 'rating' and value > value1:\n",
     "                return restaurant['name']\n",
     "            elif key == 'rating' and key1 == 'rating' and value1 > value:\n",
-    "                return alt\n",
+    "                return alternative['name']\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
