--- a/index.ipynb
+++ b/index.ipynb
@@ -149,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Fork & Fig'"
+       "float"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
     "            if key == 'rating' and key1 == 'rating' and value > value1:\n",
     "                return restaurant['name']\n",
     "            elif key == 'rating' and key1 == 'rating' and value1 > value:\n",
-    "                return alternative['name']\n",
+    "                return type(value1)\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
