Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "float"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,10 +167,10 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    for key,value in restaurant.items():\n",
     "        for key1, value1 in alternative.items():\n",
-    "            if key == 'rating' and key1 == 'rating' and value > value1:\n",
+    "            if key == 'rating' and key1 == 'rating' and (value > value1):\n",
     "                return restaurant['name']\n",
     "            elif key == 'rating' and key1 == 'rating' and value1 > value:\n",
-    "                return type(value1)\n",
+    "                return alternative['name']\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
