Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
     "    for key,value in restaurant.items():\n",
     "        for key1, value1 in alternative.items():\n",
     "            if key == 'rating' and key1 == 'rating' and int(value > value1):\n",
-    "                return restaurant['name']\n",
+    "                return key\n",
     "            elif key == 'rating' and key1 == 'rating' and int(value1 > value):\n",
     "                return alternative['name']\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
