--- a/index.ipynb
+++ b/index.ipynb
@@ -168,9 +168,9 @@
     "    for key,value in restaurant.items():\n",
     "        for key1, value1 in alternative.items():\n",
     "            if key == 'rating' and key1 == 'rating' and int(value > value1):\n",
-    "                return key\n",
+    "                return value = 'name'\n",
     "            elif key == 'rating' and key1 == 'rating' and int(value1 > value):\n",
-    "                return alternative['name']\n",
+    "                return ret\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
