Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,7 @@
     "            if key == 'rating' and key1 == 'rating' and int(value > value1):\n",
     "                return value = 'name'\n",
     "            elif key == 'rating' and key1 == 'rating' and int(value1 > value):\n",
-    "                return ret\n",
+    "                return value\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
