Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Fork & Fig'"
+       "False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
     "            if key == 'rating' and key1 == 'rating' and int(value > value1):\n",
     "                return key == 'name'\n",
     "            elif key == 'rating' and key1 == 'rating' and int(value1 > value):\n",
-    "                return value\n",
+    "                return key == 'name'\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
    ]
   },
