--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
     "    for key,value in restaurant.items():\n",
     "        for key1, value1 in alternative.items():\n",
     "            if key == 'rating' and key1 == 'rating' and int(value > value1):\n",
-    "                return restaurant\n",
+    "                return restaurant['name']\n",
     "            elif key == 'rating' and key1 == 'rating' and int(value1 > value):\n",
     "                return key == 'name'\n",
     "(better_restaurant(frontier_restaurant, fork_fig))"
