--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "'Fork & Fig'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
     "                return restaurant['name']\n",
     "            elif key == 'rating' and key1 == 'rating' and value1 > value:\n",
     "                return alternative['name']\n",
-    "(better_restaurant(frontier_restaurant, fork_fig))"
+    "better_restaurant(frontier_restaurant, fork_fig)"
    ]
   },
   {
