Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,13 +165,14 @@
    ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    for key,value in restaurant.items():\n",
-    "        for key1, value1 in alternative.items():\n",
-    "            if key == 'rating' and key1 == 'rating' and value > value1:\n",
-    "                return str(restaurant['name'])\n",
-    "            elif key == 'rating' and key1 == 'rating' and value1 > value:\n",
-    "                return str(alternative['name'])\n",
-    "better_restaurant(frontier_restaurant, fork_fig)"
+    "    if restara\n",
+    "#     for key,value in restaurant.items():\n",
+    "#         for key1, value1 in alternative.items():\n",
+    "#             if key == 'rating' and key1 == 'rating' and value > value1:\n",
+    "#                 return str(restaurant['name'])\n",
+    "#             elif key == 'rating' and key1 == 'rating' and value1 > value:\n",
+    "#                 return str(alternative['name'])\n",
+    "# better_restaurant(frontier_restaurant, fork_fig)"
    ]
   },
   {
