--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
    ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    if restara\n",
+    "    restaurant[rating]\n",
     "#     for key,value in restaurant.items():\n",
     "#         for key1, value1 in alternative.items():\n",
     "#             if key == 'rating' and key1 == 'rating' and value > value1:\n",
