Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,30 +149,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Fork & Fig'"
+       "4.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    restaurant[rating]\n",
+    "     return restaurant['rating']\n",
     "#     for key,value in restaurant.items():\n",
     "#         for key1, value1 in alternative.items():\n",
     "#             if key == 'rating' and key1 == 'rating' and value > value1:\n",
     "#                 return str(restaurant['name'])\n",
     "#             elif key == 'rating' and key1 == 'rating' and value1 > value:\n",
     "#                 return str(alternative['name'])\n",
-    "# better_restaurant(frontier_restaurant, fork_fig)"
+    "better_restaurant(frontier_restaurant, fork_fig)"
    ]
   },
   {
