Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,8 @@
    ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "     if restaurant['rating'] > rest\n",
+    "     if restaurant['rating'] > alternative['rating']:\n",
+    "            return \n",
     "#     for key,value in restaurant.items():\n",
     "#         for key1, value1 in alternative.items():\n",
     "#             if key == 'rating' and key1 == 'rating' and value > value1:\n",
