--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,9 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "     if restaurant['rating'] > alternative['rating']:\n",
-    "            return \n",
+    "            return restaurant['rating']\n",
+    "        \n",
+    "        \n",
     "#     for key,value in restaurant.items():\n",
     "#         for key1, value1 in alternative.items():\n",
     "#             if key == 'rating' and key1 == 'rating' and value > value1:\n",
