--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
     "def better_restaurant(restaurant, alternative):\n",
     "     if restaurant['rating'] > alternative['rating']:\n",
     "            return restaurant['rating']\n",
-    "    elif\n",
+    "    elif alternative[rating] > \n",
     "        \n",
     "        \n",
     "#     for key,value in restaurant.items():\n",
