Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,8 @@
     "def better_restaurant(restaurant, alternative):\n",
     "     if restaurant['rating'] > alternative['rating']:\n",
     "            return restaurant['rating']\n",
-    "    elif alternative[rating] > \n",
+    "        elif alternative[rating] > restaurant['rating']:\n",
+    "            re\n",
     "        \n",
     "        \n",
     "#     for key,value in restaurant.items():\n",
