--- a/index.ipynb
+++ b/index.ipynb
@@ -167,8 +167,8 @@
     "def better_restaurant(restaurant, alternative):\n",
     "     if restaurant['rating'] > alternative['rating']:\n",
     "            return restaurant['rating']\n",
-    "        elif alternative[rating] > restaurant['rating']:\n",
-    "            re\n",
+    "     elif alternative[rating] > restaurant['rating']:\n",
+    "            return alternative \n",
     "        \n",
     "        \n",
     "#     for key,value in restaurant.items():\n",
