--- a/index.ipynb
+++ b/index.ipynb
@@ -166,9 +166,9 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "     if restaurant['rating'] > alternative['rating']:\n",
-    "            return restaurant['name']\n",
+    "            return restaurant['rating']\n",
     "     else:\n",
-    "        return alternative['name']\n",
+    "        return alternative['rating']\n",
     "        \n",
     "        \n",
     "        \n",
