--- a/index.ipynb
+++ b/index.ipynb
@@ -166,9 +166,9 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "     if restaurant['rating'] > alternative['rating']:\n",
-    "            return (restaurant['rating']_\n",
+    "            return int(restaurant['rating'])\n",
     "     else:\n",
-    "        return alternative['rating']\n",
+    "        return (alternative['rating'])\n",
     "        \n",
     "        \n",
     "        \n",
