--- a/index.ipynb
+++ b/index.ipynb
@@ -149,15 +149,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-40-9d655126c066>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-41-08cfafea2ae9>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-9d655126c066>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-08cfafea2ae9>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return alternative['rating']\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -165,8 +165,7 @@
     "def better_restaurant(restaurant, alternative):\n",
     "     if restaurant['rating'] > alternative['rating']:\n",
     "            return (restaurant['rating']\n",
-    "     else:\n",
-    "        return alternative['rating']\n",
+    "    return alternative['rating']\n",
     "        \n",
     "        \n",
     "        \n",
