--- a/index.ipynb
+++ b/index.ipynb
@@ -149,23 +149,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-41-08cfafea2ae9>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-08cfafea2ae9>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return alternative['rating']\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4.5"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "     if restaurant['rating'] > alternative['rating']:\n",
-    "            return (restaurant['rating']\n",
-    "    return alternative['rating']\n",
+    "            return restaurant['rating']\n",
+    "     else:\n",
+    "        return alternative['rating']\n",
     "        \n",
     "        \n",
     "        \n",
