--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
     "def better_restaurant(restaurant, alternative):\n",
     "     if restaurant['rating'] > alternative['rating']:\n",
     "            return restaurant\n",
-    "     elif :\n",
+    "     elif alternative['rating'] > restaurant['rating']  :\n",
     "        return alternative"
    ]
   },
