--- a/index.ipynb
+++ b/index.ipynb
@@ -194,9 +194,9 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) > len(alternative['price']):\n",
-    "        return restaurant\n",
+    "        return restaurant['price]\n",
     "    elif len(alternative['price']) > len(restaurant['price']):\n",
-    "        return alternative"
+    "        return alternative['price']"
    ]
   },
   {
