--- a/index.ipynb
+++ b/index.ipynb
@@ -188,15 +188,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'$$'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) > len(alternative['price']):\n",
-    "        return restaurant['price]\n",
+    "        return restaurant['price']\n",
     "    elif len(alternative['price']) > len(restaurant['price']):\n",
-    "        return alternative['price']"
+    "        return alternative['price']\n",
+    "cheaper_restaurant(fork_fig, frontier_restaurant)"
    ]
   },
   {
