Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'$$'"
+       "'Fork & Fig'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) > len(alternative['price']):\n",
-    "        return restaurant['price']\n",
+    "        return restaurant['name']\n",
     "    elif len(alternative['price']) > len(restaurant['price']):\n",
     "        return alternative['price']\n",
     "cheaper_restaurant(fork_fig, frontier_restaurant)"
