--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -197,17 +197,17 @@
        "'Fork & Fig'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if len(restaurant['price']) > len(alternative['price']):\n",
+    "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return restaurant['name']\n",
     "    elif len(alternative['price']) > len(restaurant['price']):\n",
-    "        return alternative['price']\n",
+    "        return alternative['name']\n",
     "cheaper_restaurant(fork_fig, frontier_restaurant)"
    ]
   },
