Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    if restaurants['is closed'] == re"
+    "    if restaurants['is closed'] == True :\n",
+    "        return restaura"
    ]
   },
   {
