--- a/index.ipynb
+++ b/index.ipynb
@@ -318,13 +318,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    if restaurants['is closed'] == True :\n",
-    "        return restaurants"
+    "        return restaurants\n",
+    "restaurants = [fork_fig, frontier_restaurant]"
    ]
   },
   {
