Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -324,8 +324,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    if restaurants['is closed'] == True :\n",
-    "        return restaurants\n",
-    "restaurants = [fork_fig, frontier_restaurant]"
+    "        return restaurants\n"
    ]
   },
   {
