Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -357,6 +357,7 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    open\n",
     "    for rest in restaurants:\n",
     "        if rest['is_closed'] == False:\n",
     "            return rest\n",
