Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -357,10 +357,11 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open\n",
+    "    open = []\n",
     "    for rest in restaurants:\n",
     "        if rest['is_closed'] == False:\n",
-    "            return rest\n",
+    "            open.append()\n",
+    "            return \n",
     "open_restaurants(restaurants)"
    ]
   },
